--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,9 +62,9 @@
                 <li><a href="{{ '/mental-pocus-records' | relative_url }}" {% if page.url
                         contains '/mental-pocus-records' %}class="active" {% endif %}>Mental Pocus Records</a></li>
                 <li><a href="{{ '/labyrinth.html' | relative_url }}" {% if page.url contains '/labyrinth' %}class="active" {%
-                        endif %}>🎮 Labyrinth Game</a></li>
+                        endif %}>Help me get to the Show</a></li>
                 <li><a href="{{ '/slap.html' | relative_url }}" {% if page.url contains '/slap' %}class="active" {%
-                        endif %}>👋 Interactive Martin</a></li>
+                        endif %}>Slap-O-Mat</a></li>
                 <li><a href="{{ '/kontakt' | relative_url }}" {% if page.url contains '/kontakt' %}class="active" {%
                         endif %}>Kontakt</a></li>
             </ul>
